--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,13 @@
 @import url("./vendor/normalize.css");
-
+@import url("./vendor/fonts.css");
+@import url("../src/components/Header/header.css");
+@import url("../src/components/Header/Dropdown/dropdown.css");
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: "DIN pro", sans-serif;
+    color-scheme: light dark;
+    background-color: #ffffff;
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
