--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -3,18 +3,19 @@
   width: 1330px;
   margin: 70px auto 0;
   gap: 27px;
+  width: 100%;
 }
 .table_manufacture {
-  width: 412px;
+  width: 40%;
 }
 .table_distributer {
-  width: 891px;
+  width: 100%;
 }
 .table {
   height: 726px;
   border-radius: 14px;
   border: 1px solid #000;
-  background: #c1ffc2;
+  background: #ffffff;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   margin: 0;
 }
@@ -27,5 +28,3 @@
   line-height: normal;
   margin: 24px auto 20px;
 }
-
-
