--- a/src/components/TableButton/TableButton.css
+++ b/src/components/TableButton/TableButton.css
@@ -3,11 +3,17 @@
   height: 56px;
   border: none;
   border-radius: 12px;
-  background: linear-gradient(90deg, #38a43a 0%, #00b7ea 100%);
-  color: #fff;
+  background: white;
+  color: black;
+  border: 2px solid #38a43a;
   text-align: center;
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
+}
+.button-table:hover {
+  color: #fff;
+  background: linear-gradient(90deg, #38a43a 0%, #00b7ea 100%);
+  cursor: pointer;
 }
