--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -1,5 +1,5 @@
 .login {
-    background-color: #c1ffc2;
+    background: rgba(193, 255, 194, 0.6);
     box-sizing: border-box;
     max-width: 1920px;
     min-height: 100vh;
