--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -10,14 +10,14 @@
 }
 .table_distributer {
   width: 100%;
+  border: 1px solid #000;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .table {
-  height: 726px;
   border-radius: 14px;
-  border: 1px solid #000;
-  background: #ffffff;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   margin: 0;
+  display: flex;
+  flex-direction: column;
 }
 .table__header {
   color: #000;
@@ -26,5 +26,5 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin: 24px auto 20px;
+  margin: 24px auto 40px;
 }
