--- a/src/components/MainContent/Sidebar/Sidebar.css
+++ b/src/components/MainContent/Sidebar/Sidebar.css
@@ -39,9 +39,9 @@
 }
 .sidebar__menu_active:hover {
   transform: scale(1.1);
-  transition: transform 0.4s ease;
+  transition: all 0.5s ease;
 }
 .sidebar__menu:hover {
   transform: scale(1.1);
-  transition: transform 0.4s ease;
+  transition: all 0.6s ease;
 }
