--- a/src/components/MainContent/Sidebar/Sidebar.css
+++ b/src/components/MainContent/Sidebar/Sidebar.css
@@ -4,9 +4,13 @@
   left: 0;
   height: 100%;
   width: 260px;
-  background: #11101d;
+  background: #002b07;
   z-index: 100;
-  transition: all 0.5s ease;
+  transition: all 0.45s ease;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
 }
 .sidebar.close {
   width: 0;
@@ -44,4 +48,35 @@
 .sidebar__menu:hover {
   transform: scale(1.1);
   transition: all 0.6s ease;
+}
+.logout {
+  height: 45px;
+  position: sticky;
+  top: 60%;
+  transform: scale(1.3);
+}
+.sidebar__dashboard {
+  color: white;
+  font-size: 23px;
+  line-height: 21px;
+  cursor: pointer;
+}
+.sidebar__db {
+  color: white;
+  font-size: 23px;
+  line-height: 21px;
+  cursor: pointer;
+}
+.sidebar__dashboard:hover {
+  transform: scale(1.15);
+  transition: all 0.4s ease;
+}
+.sidebar__db:hover {
+  transform: scale(1.15);
+  transition: all 0.4s ease;
+}
+.sidebar__group {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
 }
