--- a/src/components/TableButton/TableButton.css
+++ b/src/components/TableButton/TableButton.css
@@ -17,3 +17,7 @@
   background: linear-gradient(90deg, #38a43a 0%, #00b7ea 100%);
   cursor: pointer;
 }
+.sidebar__menu-logout {
+  width: 190px;
+  height: 41px;
+}
