--- a/src/components/MainContent/ManufactureTable/ManufactureTable.css
+++ b/src/components/MainContent/ManufactureTable/ManufactureTable.css
@@ -1,13 +1,12 @@
 .manufacture__table-item {
   width: 350px;
-  height: 96px;
+  min-height: 325px;
   border-radius: 9px;
   border: 1px solid #000;
   background: #fff;
   box-shadow: 0px 1px 5px 3px rgba(0, 0, 0, 0.25);
-  margin: auto;
   display: flex;
-  padding: 10px;
+  padding: 26px;
   justify-content: center;
   gap: 10px;
 }
@@ -30,12 +29,11 @@
 }
 .manufacture__table-item-name {
   margin: 0;
-  overflow: hidden;
-  text-overflow: clip;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  overflow-wrap: anywhere;
 }
 .manufacture__table-item-icon {
   background-image: url("../../../images/iconProductOK.svg");
