--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
 #root {
-    max-width: 1440px;
-    margin: auto;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  max-width: 1440px;
+  margin: auto;
+}
+body {
+  height: 100vh;
+}
+.main {
+  flex: 1 1 auto;
+  align-items: flex-start;
 }
