--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -9,6 +9,7 @@
 }
 .footer {
   display: flex;
-  margin: 70px auto 40px;
+  margin: 70px 0 40px;
   padding: 0 55px 0;
+  justify-content: flex-start;
 }
